--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ ul.table-of-contents li:not(.logo) a.active, ul.table-of-contents li:not(.logo) 
 }
 
 ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.logo) a span {
-  color: #b2eaf6 !important;
+  color: #333333 !important;
 }
 
 li.logo span {
