--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,6 +529,10 @@ a.hoverline:hover {
 }
 
 
+.card-reveal {
+  font-size: 18px; /* Adjust the size to your preference */
+}
+
 .card-reveal p {
   text-align: justify;
 }
