--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,9 +531,12 @@ a.hoverline:hover {
 
 .card-reveal {
   font-size: 18px; 
-  padding-top: 40px;
 }
 
+
+.card-reveal {
+  padding-top: 40px !important;
+}
 .card-reveal p {
   text-align: justify;
 }
