--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,8 +367,7 @@ h3 {
 .waves-effect.waves-blue .waves-ripple {
   /* The alpha value allows the text and background color
    of the button to still show through. */
-  /* background-color: rgba(33, 150, 243, 0.2); */
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(33, 150, 243, 0.2);
 }
 
 .card {
@@ -574,7 +573,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #0B2442 !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
 }
 
 /* .teal {
