--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,8 +573,8 @@ small {
 /* .teal */
 
 .teal {
-  /* background-color: #0B2442 !important; */
-  background-color: rgba(0, 0, 0, 0.4)
+  background-color: #0B2442 !important;
+  /* background-color: rgba(0, 0, 0, 0.4) */
 }
 
 /* .teal {
