--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,12 +321,12 @@ h3 {
 
 #intro.section {
   /* background: #00e1ff repeat; */
-  background:  rgba(0, 0, 0, 0.4);
+  background:  rgba(255, 255, 255, 0.4);
   position: relative;
 }
 
 #intro.section .container {
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: 200;
   left: 0;
   position: absolute;
