--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,8 @@ h3 {
 
 #intro.section {
   /* background: #00e1ff repeat; */
-  background:  rgba(255, 255, 255, 0.8);
+  background:  rgba(255, 255, 255);
+  /* background: grey; */
   position: relative;
 }
 
