--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ h3 {
 
 #intro.section {
   /* background: #00e1ff repeat; */
-  background:  rgba(255, 255, 255, 1) !important;
+  background:  white !important;
   position: relative;
 }
 
